--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
-  "name": "api-todo-list",
-  "type": "module",
+  "name": "api-de-todolist-lista-de-tarefas-",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch src/server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LucasLuann/api-de-TodoList-Lista-de-tarefas-.git"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LucasLuann/api-de-TodoList-Lista-de-tarefas-/issues"
+  },
+  "homepage": "https://github.com/LucasLuann/api-de-TodoList-Lista-de-tarefas-#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "nodemon": "^2.0.21"
+  }
 }
